--- a/main.css
+++ b/main.css
@@ -42,7 +42,7 @@ body{
     border-radius: 0px;
     border-top: 0;
  }
-.nav-item:hover::after {
+.menu-item:hover::after {
     content: "";
     display: block;
     position: absolute;
@@ -199,13 +199,13 @@ margin: auto 0;
     margin-right: 5px;
 
 }
-.bottom-bar i::after {
+.percentage::after {
     content: "%";
     position: absolute;
     left: 2px;
     top: 2px;
     color: white;
-    font-size: 0.8rem;
+    font-size: 0.75rem;
 }
 
 
@@ -235,4 +235,42 @@ margin-right: 4rem;
 }
 .now-sale-col span{
     color: white;
+}
+
+/* section with bestselling */
+.to-right{
+    display: flex;
+}
+
+
+.right-featured{
+    margin: auto 0;
+    height: 43px;
+    border-bottom: 1px solid rgb(184, 184, 184);
+}
+
+.right-featured i,
+.right-featured h5 {
+    margin: auto 0;
+    margin-right: 5px;
+}
+
+.to-center{
+    margin: auto;
+}
+.game-tags span{
+background-color: #083b5f;
+color: white;
+padding: 5px 10px;
+}
+.unset,
+.unset:hover {
+    text-decoration: none;
+    color: unset;
+}
+
+.library {
+    font-size: 0.8rem;
+    background-color: #C7C7C7 !important;
+    color: rgb(75, 75, 75) !important
 }
