--- a/main.css
+++ b/main.css
@@ -274,3 +274,8 @@ padding: 5px 10px;
     background-color: #C7C7C7 !important;
     color: rgb(75, 75, 75) !important
 }
+
+.wishlist {
+    background-color: #ECA125 !important;
+    color: white !important;
+}
