--- a/main.css
+++ b/main.css
@@ -278,4 +278,37 @@ padding: 5px 10px;
 .wishlist {
     background-color: #ECA125 !important;
     color: white !important;
+    font-size: 0.8rem;
+}
+
+.showmore {
+    position: relative;
+    background-color: #D8D8D8;
+    padding: 0.6rem 4rem;
+    border: 1px solid grey;
+    border-radius: 5px;
+    color: grey;
+}
+
+.showmore:hover {
+    box-shadow: 0 1px 5px grey;
+    border: 1px solid #D8D8D8;
+}
+
+.showmore::after {
+    content: ">";
+    position: absolute;
+    right: 1.5rem;
+    top: 0.4rem;
+    font-size: 1.3rem;
+}
+.strechy{
+    background-size: cover;
+    display: block;
+    height: 100%;
+    width: 100%;
+}
+.strech {
+height: 12.7rem;
+
 }
