--- a/main.css
+++ b/main.css
@@ -261,7 +261,8 @@ margin-right: 4rem;
 .game-tags span, .blue{
 background-color: #083b5f;
 color: white;
-padding: 5px 10px;
+padding: 4px 12px;
+font-size: 0.8rem;
 }
 .unset,
 .unset:hover {
